[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Keith M Corbett <keith@dv01.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

